# synak

./: README.md  pyproject.toml
demos/client-server/: client.toml  server.toml
demos/p2p/: node_1.toml  node_2.toml
docs/: config.md  provider-interface.md
syncd/: pyproject.toml
syncd/syncd/: __main__.py  config.py  daemon.py  main.py
syncd/syncd/api/: routes.py  server.py
syncd/syncd/platform/: ipc.py  process.py  signals.py
syncd/syncd/sync/: base.py  file_index.py  manager.py  protocol.py  registry.py  sync_engine.py  vector_clock.py
syncd/syncd/sync/providers/: __init__.py  _common.py  client_server.py  p2p.py  subprocess.py
syncd/syncd/utils/: fs.py
syncd/tests/: test_api.py  test_config.py  test_daemon.py  test_fs.py  test_manager.py  test_provider_client_server.py  test_registry.py
synctl/: pyproject.toml
synctl/synctl/: client.py  main.py
synctl/synctl/commands/: config.py  shutdown.py  status.py  sync.py
synctl/synctl/platform/: ipc.py
synctl/tests/: test_commands.py
syncui/: pyproject.toml
syncui/sync_web/: app.py  daemon_client.py  ipc.py  routes.py  tomlio.py
syncui/sync_web/static/: app.js  style.css
syncui/sync_web/templates/: base.html  index.html
syncui/syncui/: app.py  daemon_client.py  routes.py  tomlio.py
syncui/syncui/static/: app.js  style.css
syncui/syncui/templates/: _form_fragment.html  _macros.html  base.html  index.html  status.html
syncui/tests/: test_tomlio.py
tests/integration/: conftest.py  test_status.py
