[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "syncd"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "watchfiles>=0.21",
    "jsonschema>=4.0",
]

[project.scripts]
syncd = "syncd.main:main"

[tool.setuptools.packages.find]
where = ["."]
