[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "synctl"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "click>=8.0",
]

[project.scripts]
synctl = "synctl.main:main"

[tool.setuptools.packages.find]
where = ["."]
