[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "syncui"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "httpx>=0.27",
    "tomli-w>=1.0",
]

[project.scripts]
syncui = "syncui.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["syncui*"]
